# keycloak-poc

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
keycloak-api/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
keycloak-api/api/: __init__.py  app.py  auth.py  dtos.py  logger_utils.py  models.py
keycloak-api/api/templates/: index.html
keycloak-auth/: .env.example  Makefile  README.md  compose-test.yaml  docker-compose.yaml
keycloak-books-library/: Gemfile  Makefile  Procfile.dev
keycloak-books-library/app/assets/stylesheets/: application.css  custom.css
keycloak-books-library/app/controllers/: books_controller.rb
keycloak-books-library/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
keycloak-books-library/config/environments/: production.rb
keycloak-books-library/config/initializers/: devise.rb
keycloak-books-library/db/: schema.rb
keycloak-books-library/db/migrate/: 20240305221409_create_books.rb
keycloak-books-library/test/controllers/: books_controller_test.rb
keycloak-books-library/test/fixtures/: books.yml
keycloak-books-library/test/system/: books_test.rb
keycloak-fe/: package.json  vite.config.ts
keycloak-fe/src/: App.tsx
keycloak-fe/src/context/: KeyclockContext.tsx
keycloak-fe/src/pages/: HomePage.tsx
keycloak-web/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  index.html  package.json  vite.config.ts
keycloak-web/src/: App.tsx
keycloak-web/src/components/: AuthenticationMessage.tsx  Layout.tsx  NavBar.tsx
keycloak-web/src/context/: ErrorBoundary.tsx  KeycloakContext.tsx  KeyclockContext.tsx
keycloak-web/src/hooks/: useKeycloak.ts
keycloak-web/src/pages/: HomePage.tsx  MyAccount.tsx  MyItems.tsx  MyProfile.tsx
keycloak-web/src/types/: dtos.ts
(+5 files in other folders)
