[tool.poetry]
name = "keycloak-api"
version = "0.1.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
